# statsclient

./: CMakeLists.txt  README.md  run.sh  sdkconfig  sdkconfig.old  test_logging.sh
main/: CMakeLists.txt  Kconfig.projbuild  certificate_manager.c  certificate_manager.h  device_keys.h  idf_component.yml  internet_verification.c  internet_verification.h  main.c  mqtt_client.c  mqtt_client.h  mqtt_handler.c  mqtt_handler.h  wifi_provisioning.c  wifi_provisioning.h
